@@ -19,7 +19,7 @@
 # gnulib modules used by this package.
 gnulib_modules="
     acl alloca btowc extensions getline getopt gettext localcharset \
-    mbrlen mbrtowc mkstemp obstack pathmax regex stdbool
+    mbrlen mbrtowc mbsinit mkstemp obstack pathmax regex stdbool
     stat-macros strerror strverscmp unlocked-io verify wcrtomb wctob"
 
 checkout_only_file=
